--- a/src/HabitRPG.QuickToDo/App.config
+++ b/src/HabitRPG.QuickToDo/App.config
@@ -1,6 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="HabitRPG.QuickToDo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <userSettings>
+    <HabitRPG.QuickToDo.Properties.Settings>
+      <setting name="ApiToken" serializeAs="String">
+        <value>00000000-0000-0000-0000-000000000000</value>
+      </setting>
+      <setting name="UserId" serializeAs="String">
+        <value>00000000-0000-0000-0000-000000000000</value>
+      </setting>
+      <setting name="ServiceUri" serializeAs="String">
+        <value>https://habitrpg.com/</value>
+      </setting>
+    </HabitRPG.QuickToDo.Properties.Settings>
+  </userSettings>
 </configuration>
