--- a/src/HabitRPG.QuickToDo/App.config
+++ b/src/HabitRPG.QuickToDo/App.config
@@ -27,6 +27,12 @@
       <setting name="ServiceUri" serializeAs="String">
         <value>https://habitrpg.com/</value>
       </setting>
+      <setting name="ProxyHost" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ProxyPort" serializeAs="String">
+        <value>0</value>
+      </setting>
     </HabitRPG.QuickToDo.Properties.Settings>
   </userSettings>
 </configuration>
