--- a/src/HabitRPG.QuickToDo/packages.config
+++ b/src/HabitRPG.QuickToDo/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
+  <package id="GoogleAnalyticsTracker.Core" version="3.0.10" targetFramework="net451" />
+  <package id="GoogleAnalyticsTracker.Simple" version="3.0.10" targetFramework="net451" />
   <package id="HabitRPG.Client" version="1.1.0.0-alpha" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="net451" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="4.3.31.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
