--- a/src/HabitRPG.QuickToDo/packages.config
+++ b/src/HabitRPG.QuickToDo/packages.config
@@ -4,6 +4,7 @@
   <package id="GoogleAnalyticsTracker.Core" version="3.0.10" targetFramework="net451" />
   <package id="GoogleAnalyticsTracker.Simple" version="3.0.10" targetFramework="net451" />
   <package id="HabitRPG.Client" version="2.0.0.8" targetFramework="net451" />
+  <package id="MahApps.Metro" version="0.14.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net451" />
   <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="net451" />
