Add support wunderlist

--- a/src/QuickToDo/App.config
+++ b/src/QuickToDo/App.config
@@ -24,16 +24,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="HabiticaApiUri" value="https://habitrpg.com/"/>
+    <add key="WunderlistApiUri" value="https://a.wunderlist.com/api/v1/"/>
+  </appSettings>
   <userSettings>
     <QuickToDo.Properties.Settings>
       <setting name="ApiToken" serializeAs="String">
-        <value>00000000-0000-0000-0000-000000000000</value>
+        <value />
       </setting>
       <setting name="UserId" serializeAs="String">
-        <value>00000000-0000-0000-0000-000000000000</value>
+        <value />
       </setting>
-      <setting name="ServiceUri" serializeAs="String">
-        <value>https://habitrpg.com/</value>
+      <setting name="ServiceType" serializeAs="String">
+        <value>Wunderlist</value>
       </setting>
     </QuickToDo.Properties.Settings>
   </userSettings>
